--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,16 @@
+/* SPACING SYSTEM (px)
+ 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+ FONT SIZE SYSTEM (px)
+ 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98 */
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   list-style: none;
+  font-family: "Inter", sans-serif;
 }
+
 a {
   text-decoration: none;
   color: gray;
@@ -11,34 +18,9 @@ a {
 ::-webkit-scrollbar {
   display: none;
 }
-/* Nav Bar Styling Start Here */
-.navbar-custom {
-  background-color: #d84f57;
-}
-.navbar-text {
-  color: white !important;
-}
-.busTkt {
-  color: white !important;
-  font-weight: bolder !important;
-}
-.logo {
-  margin-left: 5%;
-}
-.navRight {
-  margin-right: 9%;
-}
-
-.nav-item > a:hover {
-  color: rgb(241, 228, 228) !important;
-}
-
-/* Menu bar Styling */
-.navbar-light .navbar-toggler-icon {
-  background-image: url(https://i.postimg.cc/3wnC7vjX/transparent-hd-white-menu-burger-icon-31634946136ufll2pj5eo-removebg-preview.png);
-}
-.navbar-light .navbar-toggler {
-  border-color: rgba(0, 0, 0, 0);
+/* Offer popup  */
+#main {
+  position: relative;
 }
 #coupon {
   height: 500px;
@@ -59,60 +41,139 @@ button {
   padding: 1% 2%;
   border: none;
   font-size: 24px;
-  /* font-weight: 500; */
   float: right;
   cursor: pointer;
   color: #d84f57;
 }
+
+/* Nav Bar Styling Start Here */
+.navbar-custom {
+  background-color: #d84f57;
+  font-size: 13px;
+  max-width: 100vw;
+}
+
+.logo {
+  margin: 0% 3%;
+}
+.logo img {
+  width: 65px;
+}
+
+/* Nav bar Toggler */
+.navbar-light .navbar-toggler-icon {
+  background-image: url(https://i.postimg.cc/3wnC7vjX/transparent-hd-white-menu-burger-icon-31634946136ufll2pj5eo-removebg-preview.png);
+}
+.navbar-light .navbar-toggler {
+  border-color: rgba(0, 0, 0, 0);
+}
+.navbar-text {
+  color: white !important;
+}
+.busTkt {
+  color: white !important;
+  font-weight: bolder !important;
+}
+.navRight {
+  margin-right: 9%;
+}
+.nav-item > a:hover {
+  color: rgb(241, 228, 228) !important;
+}
+
+.dropdown-menu a {
+  font-size: 12px;
+  font-weight: 600;
+}
+.dropdown-menu a:hover,
+.dropdown-menu a:visited {
+  background-color: #e48489;
+}
+
 /* Nav Bar Styling Ends Here */
 
 .welcomeDiv {
   background-image: url(https://i.postimg.cc/yxtbTZQD/welcome-Image.jpg);
-  height: 450px;
+  height: 400px;
   overflow: hidden;
   background-size: cover;
   width: 100%;
-  background-repeat: round;
+  background-repeat: no-repeat;
+  margin-bottom: 0;
 }
+
 .form-control:focus {
   border-color: #d84f57;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #d84f57;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #e48489;
 }
 
 .searchBtn {
+  font-size: 16px;
   background-color: #d84f57;
   color: white;
-  font-weight: 600;
+  font-weight: 500;
 }
 .searchBtn:hover {
-  color: #d84f57;
-  background-color: white;
+  background-color: #c2474e;
+  color: white;
 }
 
+.promtion-wrap {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  transform: translate(50%, -50%);
+  box-shadow: 0 3px 7px 0 rgb(0 0 0 / 28%);
+  padding: 1% 0px;
+}
+.promtion-wrap img {
+  height: 80px;
+}
+.promtion-wrap .text {
+  font-size: 12px;
+}
+.promtion-wrap p {
+  color: #777;
+}
+
+/* Offers Section  */
+
 .offerDiv {
-  font-size: 13px;
-  padding-top: 1%;
-  color: gray;
+  margin-top: 0;
   justify-content: center;
 }
 .offer {
+  color: gray;
+  font-size: 12px;
+  font-weight: 600;
   box-sizing: border-box;
+  box-shadow: 0 1px 10px #c3c3c3;
   padding: 2%;
+  width: 350px;
   transition-duration: 0.5s;
+  margin-bottom: 2%;
+  border-radius: 10px;
 }
 .offer:hover {
-  transform: scale(1.1);
-  border-radius: 10px;
-  border: 2px solid silver;
+  transform: scale(1.05);
 }
+
+/* App Ad Section */
 .appAd {
-  background-image: url(https://i.postimg.cc/5NFnByn6/city-scape-app-download.png);
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.5),
+      rgba(255, 255, 255, 0.5)
+    ),
+    url(https://i.postimg.cc/5NFnByn6/city-scape-app-download.png);
   background-repeat: no-repeat;
   background-size: cover;
-
-  height: 500px;
+  height: auto;
+  padding-bottom: 1%;
 }
-
+.appText {
+  font-size: 16px;
+}
 .appImg > img {
   height: 400px;
   margin-left: 25%;
@@ -120,30 +181,45 @@ button {
 
 #phoneNum {
   width: 200px;
+  height: 30px;
+}
+#phoneNum:focus {
+  border-color: #d84f57;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.075), 0 0 8px #e48489;
+}
+#phoneNum::placeholder {
+  font-size: 14px;
 }
 .phoneBtn {
   background-color: #d84f57;
   color: white;
   font-weight: 500;
   font-size: 12px;
+  margin-left: 0;
+  height: 30px;
 }
 .phoneBtn:hover {
-  color: #d84f57;
-  background-color: white;
+  color: #fff;
+  background-color: #c2474e;
   border: 1px solid #d84f57;
 }
-
+.applogo {
+  font-size: 24px;
+  /* margin-top: 1%; */
+}
+.icons {
+  color: black;
+}
+.icons:hover {
+  color: #666;
+}
 .fa-apple {
-  font-size: 31px;
-  margin-left: -8px;
-  margin-top: 3px;
+  font-size: 25px;
 }
 .fa-google-play {
-  font-size: 23px;
-  margin-left: -19px;
-  margin-top: 6px;
+  font-size: 19px;
 }
-
+/* We promise to deliver */
 .promise {
   background-color: #ededed;
   padding-top: 1%;
@@ -151,30 +227,54 @@ button {
 }
 .promise > img {
   height: 80px;
+  margin-bottom: 1%;
+}
+.promise h3 {
+  text-align: center;
+  color: #333;
+  margin-bottom: 1%;
+  font-weight: 600;
 }
 .deliverDiv {
-  padding-top: 1%;
+  padding: 2%;
   background-color: #fff;
   border-right: 1px solid #ededed;
 }
 .deliverDiv > img {
-  height: 100px;
+  height: 90px;
   margin-bottom: 40px;
 }
 .deliverText {
-  color: grey;
+  font-size: 14px;
   text-align: center;
   margin: 20px 0px;
 }
+.deliverText .heading {
+  font-size: 18px;
+  color: #333;
+  font-weight: 500;
+}
+/* Awards */
 .awards {
   margin-top: 2%;
   padding-top: 2%;
   background-color: #fff;
   text-align: center;
 }
+.awards h3 {
+  margin-bottom: 3%;
+  color: #333;
+  font-weight: 500;
+}
 .awards > img {
   height: 100px;
 }
+.award-text {
+  font-size: 14px;
+  text-align: center;
+  font-weight: 500;
+}
+/* Global Presence */
 .flags {
   margin-top: 5%;
   padding-top: 5%;
@@ -185,10 +285,22 @@ button {
   font-weight: 400;
   margin-bottom: 2%;
 }
+.flag-img {
+  height: 100px;
+  margin-bottom: 1%;
+}
+.flag-text {
+  text-align: center;
+  font-size: 12px;
+  color: #333;
+  font-weight: 500;
+}
+
+/* Numbers  */
 .numbers {
   text-align: center;
   margin-left: auto;
-  padding-top: 10%;
+  padding-top: 5%;
   padding-bottom: 5%;
 }
 .numbers > p {
@@ -198,6 +310,7 @@ button {
   color: #da4e52;
   margin-top: -3%;
 }
+/* Bus Routes */
 .routes {
   background-color: #f1f1f1;
   padding: 3%;
@@ -224,6 +337,7 @@ button {
 }
 .topOperators ul li a {
   border-right: 1px solid grey;
+  font-size: 12px;
   padding: 0;
   padding-right: 3px;
   margin-left: 2px;
@@ -236,7 +350,7 @@ button {
 }
 .footer {
   background-color: #1b2330;
-  padding-top: 2%;
+  padding: 2%;
 }
 .about ul li a {
   font-size: smaller;
@@ -284,12 +398,22 @@ button {
 }
 /* Media Queries */
 @media screen and (max-width: 768px) {
+  #coupon {
+    display: none;
+    opacity: 1;
+  }
+  #main {
+    opacity: 1;
+  }
   .welcomeDiv {
     background-image: none;
     height: 350px;
   }
-  .appText {
+  .promtion-wrap {
     display: none;
+  }
+  .appAd {
+    height: auto;
   }
   .appImg > img {
     margin-left: 0;
